fixed layout bug

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -60,8 +60,8 @@
   width: 120%;
   height: 120%;
   transform: translateY(-2.7rem);
-  border: 3px solid green;
-  background-color: rgba(0, 128, 0, 0.362);
+  border: 1px solid green;
+  background-color: rgba(0, 128, 0, 0.176);
   transition: .25s;
   z-index: -1;
 }
@@ -262,7 +262,7 @@
 
 @media(max-width: 800px){
 
-  .todo>*:last-child{
+  .todo>*:nth-child(2){
     height: auto;
   }
   .todo nav{
